--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walkman Player</title>
+    <title>BoomBox</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Walkman Player</h1>
+    <h1>BOOM BOX</h1>
     
     <div class="container">
         <!-- Video del Walkman -->
-        <video id="walkmanVideo" loop>
-            <source src="video.mov" type="video/mp4">
-            Tu navegador no soporta videos.
-        </video>
+        <image id="boomBoxImage">
+            <source src="boombapSTOCK.jpg" type="image/.jpg">
+        </image>
 
         <!-- Botón de Play/Pause -->
         <button id="playPauseBtn" class="play"></button>
