--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!-- Video del Walkman -->
         <image id="boomBoxImage">
-            <source src="boombapSTOCK.jpg" type="image/.jpg">
+            <source src="boombapSTOCK.jpg">
         </image>
 
         <!-- Botón de Play/Pause -->
